[gd_scene load_steps=5 format=3 uid="uid://xlssvxwqgfut"]

[ext_resource type="Theme" uid="uid://dxtk6uqcp4kq4" path="res://mainTheme.tres" id="1_p0cnb"]
[ext_resource type="Texture2D" uid="uid://bqoco2dl1y6lr" path="res://art/1bit/XaviArt/buttons-ui/box-charselection-01-sprite.png" id="2_lolm4"]
[ext_resource type="Script" uid="uid://b1vklnpfae6xi" path="res://Scenes/UI/tool_tip.gd" id="2_qqdyy"]
[ext_resource type="Texture2D" uid="uid://5sryc72ckfy2" path="res://art/1bit/orcoArt/axe_attack.png" id="3_ewojc"]

[node name="ToolTip" type="NinePatchRect"]
process_mode = 3
custom_minimum_size = Vector2(250, 80)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -122.0
offset_top = 8.0
offset_right = 128.0
offset_bottom = 88.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource("1_p0cnb")
texture = ExtResource("2_lolm4")
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 14
patch_margin_bottom = 14
script = ExtResource("2_qqdyy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="ToolTipIcon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("3_ewojc")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlaceHolder" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_horizontal = 3

[node name="ToolTipText" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
bbcode_enabled = true
text = "[center]At the start of your turn, gain[color='55ffff'] 2 Strength[/color].[/center]"
